--- a/Assets/ExtendedButtons/ExtendedButtons.asmdef
+++ b/Assets/ExtendedButtons/ExtendedButtons.asmdef
@@ -1,3 +1,15 @@
-﻿{
-	"name": "ExtendedButtons"
+{
+    "name": "ExtendedButtons",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [
+        "WebGL"
+    ],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
